Prevent flash of non-moving-messages

--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -15,6 +15,17 @@ html
         link.bootswatch(rel="stylesheet", href="/css/fontana.css")
         link(rel="stylesheet", href="/css/transitions.css")
         link(rel="stylesheet", href="/css/demo.css")
+        script.
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-30289566-2']);
+            _gaq.push(['_setDomainName', 'twitterfontana.com']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = 'http://www.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
     body
         nav.navbar.navbar-default.navbar-fixed-top
             .navbar-header
@@ -53,7 +64,7 @@ html
             - messages.push("Completely free & open source. So when you are feeling creative you can create a Twitter wall just the way you like it!")
             - messages.push("Haven't got the time or powress to DIY, but still want a customized Twitter Wall with your own branding or extra features? Contact us @tweetfontana, we'd love to help!")
             each message, i in messages
-                div.message.media.well.col-md-6.col-md-offset-3(id='msg'+i)
+                div.message.media.well.col-md-6.col-md-offset-3.hidden(id='msg'+i)
                     figure.pull-left.media-object
                         img.avatar.img-thumbnail(src="/img/avatar.png", width="64", height="64", alt="")
                     .media-body
@@ -87,17 +98,6 @@ html
         script(src="/bootstrap/js/bootstrap.min.js")
         script(src="/js/twitterfontana.min.js")
         script(src="/js/demo.min.js")
-        script.
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-30289566-2']);
-            _gaq.push(['_setDomainName', 'twitterfontana.com']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = 'http://www.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
         script.
             !function(d,s,id){
                 var js,fjs=d.getElementsByTagName(s)[0];
