added tulane branding, etc

--- a/frontend/src/css/demo.scss
+++ b/frontend/src/css/demo.scss
@@ -124,3 +124,25 @@ html, body {
         padding-left: 3em;
     }
 }
+
+// overrides
+
+.tulane-logo {
+    width: 70%;
+}
+
+.tulane-heading {
+    width: 20%;
+}
+
+.navbar-header {
+    width: 20%;
+}
+
+.tulane-shield {
+    width: 20%;
+}
+
+.tulane-hashtag {
+    font-size: 27px;
+}
