--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -41,9 +41,7 @@ html
                     i.icon-bar
                     i.icon-bar
                     i.icon-bar
-                h1.icon-fontana-logo.navbar-text
-                .navbar-brand
-                    | Twitter Fontana
+                img.tulane-logo(src='/img/logo-nofill.gif')
             .collapse.navbar-collapse
                 #controls.navbar-left
                     button.btn.btn-default.navbar-btn.settings(type="button")
@@ -89,18 +87,10 @@ html
 
         #logos.well.well-sm
             button.close(type="button") &times;
-            a.icon-eight-logo.text-muted(href="http://www.eight.nl/", title="Twitterfontana was made by Eight Media Internetbureau", target="_blank")
-                span.sr-only Eight Media Internetbureau Arnhem
-            | &nbsp;
-            a.icon-github-logo.text-muted(href="https://github.com/EightMedia/TwitterFontana", title="Fork Twitter Fontana on GitHub", target="_blank")
-                span.sr-only GitHub
-            | &nbsp;
-            a.twitter-share-button(href="https://twitter.com/share", data-url="http://twitterfontana.com", data-text="Clean, fully customizable, Twitter fountain without Flash", data-related="tweetfontana", data-hashtags="twitterfontana")
-                | Tweet
-            | &nbsp;
-            span.facebook
-                iframe(src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Ftwitterfontana&send=false&layout=button_count&width=450&show_faces=false&action=like&colorscheme=light&font=segoe+ui&height=21&appId=202320067644&locale=en_US", scrolling="no", frameborder="0", allowTransparency="true", height=20, width=100)
-
+            span
+                img.tulane-shield(src='/img/shield.gif')
+            a.tulane-hashtag(href='https://twitter.com/hashtag/tulaneconnect?src=tren')
+                | #tulaneconnect 
 
         script(src="/js/lib.min.js")
         script(src="/bootstrap/js/bootstrap.min.js")
