updated default query

--- a/frontend/src/pop/settings.jade
+++ b/frontend/src/pop/settings.jade
@@ -7,7 +7,7 @@
             form#fontana-settings
                 .form-group
                     label(for="search") Search
-                    input#search.form-control(type="text", value="TwitterFontana")
+                    input#search.form-control(type="text", value="tulane")
                     p.help-block.
                         Search is disabled unless you've signed in with Twitter
                 .form-group
